--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
-Flask==1.1.2
+Flask>=2.2.2
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
 idna==2.10
