--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask-Login==0.5.0
 Flask-WTF==0.14.3
 idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2>=3.0
 MarkupSafe==1.1.1
 pymongo==3.11.4
 python-dotenv==0.14.0
