--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask>=2.2.2
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
 idna==2.10
-itsdangerous==1.1.0
+itsdangerous>=2.0
 Jinja2>=3.0
 MarkupSafe==1.1.1
 pymongo==3.11.4
