--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-WTF==0.14.3
 idna==2.10
 itsdangerous>=2.0
 Jinja2>=3.0
-MarkupSafe==1.1.1
+MarkupSafe>=2.0
 pymongo==3.11.4
 python-dotenv==0.14.0
 Werkzeug>=2.2.2
