--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-click>=8.0
+click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
-Flask>=2.2.2
+Flask==1.1.2
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
 idna==2.10
-itsdangerous>=2.0
-Jinja2>=3.0
-MarkupSafe>=2.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 pymongo==3.11.4
 python-dotenv==0.14.0
-Werkzeug>=2.2.2
+Werkzeug==1.0.1
 WTForms==2.3.3
