--- a/Dockerfiles/app/Dockerfile
+++ b/Dockerfiles/app/Dockerfile
@@ -4,4 +4,4 @@ RUN apt update && apt install git -y
 RUN git clone https://github.com/pavankumar-parimi/Flask-Based-Web-Application.git && cd Flask-Based-Web-Application && git switch pavankumar-parimi/containerize
 WORKDIR Flask-Based-Web-Application
 RUN pip install --no-cache-dir -r requirements.txt
-CMD [ "python3", "flaskMongoApp.py" ]
+CMD [ "python", "flaskMongoApp.py" ]
